- Added alert error in detail page when trying to add to cart. - More visibility to error fields when form doesn't validate. - BUGFIXING: Error getting 'camp' parameter from url in category page. - BUGFIXING: Error setting same value label without discriminate which filter is.

--- a/includes/css/less/mixins/forms.less
+++ b/includes/css/less/mixins/forms.less
@@ -30,8 +30,11 @@
 }
 
 label.error {
-  color: @rojo;
-  font-weight: 700;
+  color: @blanco;
+  background-color: @rojo;
+  padding: 2px 5px;
+  display: block;
+  font-weight: 400;
 }
 
 input[type="checkbox"] + .error {
